# disk-diff

./: .gitignore  .pylintrc  README.md  disk-diff  pyproject.toml  start.sh
src/: main.py
